--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Hello World !</h1>
     <p>je suis le fichier généré par github actions</p>
+    <p>je suis un commit pour lancer l'action</p>
   </body>
 </html>
