--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello World !</h1>
     <p>je suis le fichier généré par github actions</p>
     <p>je suis un commit pour lancer l'action</p>
+    <p>another commit</p>
   </body>
 </html>
