--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>je suis le fichier généré par github actions</p>
     <p>je suis un commit pour lancer l'action</p>
     <p>another commit</p>
+    <p>Demo trop classe</p>
   </body>
 </html>
