commit pour thomas

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>je suis un commit pour lancer l'action</p>
     <p>another commit</p>
     <p>Demo trop classe</p>
+    <p>Demo pour Thomas</p>
   </body>
 </html>
