--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <p>another commit</p>
     <p>Demo trop classe</p>
     <p>Demo pour Thomas</p>
+    <img
+      src="https://www.sheba.fr/sites/g/files/fnmzdf4796/files/2023-10/lars-van-poucke-DXcB_WUBfYY-unsplash.jpg"
+      alt="Kitten picture"
+    />
   </body>
 </html>
