--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CI Test Nginx</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World !</h1>
-    <p>je suis le fichier généré par github actions</p>
-    <p>je suis un commit pour lancer l'action</p>
-    <p>another commit</p>
-    <p>Demo trop classe</p>
-    <p>Demo pour Thomas</p>
+    <div id="main-banner">
+      <h1>Hello World !</h1>
+      <p>je suis le fichier généré par github actions</p>
+      <p>je suis un commit pour lancer l'action</p>
+      <p>another commit</p>
+      <p>Demo trop classe</p>
+      <p>Demo pour Thomas</p>
+    </div>
     <img
       src="https://www.sheba.fr/sites/g/files/fnmzdf4796/files/2023-10/lars-van-poucke-DXcB_WUBfYY-unsplash.jpg"
       alt="Kitten picture"
